--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
+    "bootstrap": ">=4.1.2",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.1",
